--- a/explore.html
+++ b/explore.html
@@ -57,6 +57,22 @@
       </div>
       <!-- FOOTER END -->
     </div>
+    <script type="text/javascript">
+      (function (d, t) {
+        var v = d.createElement(t),
+          s = d.getElementsByTagName(t)[0];
+        v.onload = function () {
+          window.voiceflow.chat.load({
+            verify: { projectID: "672f6bcf905199c9a7d490c2" },
+            url: "https://general-runtime.voiceflow.com",
+            versionID: "production",
+          });
+        };
+        v.src = "https://cdn.voiceflow.com/widget/bundle.mjs";
+        v.type = "text/javascript";
+        s.parentNode.insertBefore(v, s);
+      })(document, "script");
+    </script>
     <!-- CONTENT END -->
   </body>
   <!-- BODY END -->
