--- a/about.html
+++ b/about.html
@@ -1,79 +1,84 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link href="about.css" rel="stylesheet" type="text/css" media="all" />
+<html lang="en">
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mexplore - About</title>
+    <link href="home.css" rel="stylesheet" type="text/css" />
+    <link href="about.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="audio-waves.png" type="image/x-icon" />
-    <title>mexplore about section</title>
-  </head>
+</head>
+<body style="background-color: #e4e4d5" class="body">
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="nav-content">
+            <div class="logo">
+                <a href="home.html">
+                    <img src="audio-waves.png" alt="Mexplore" class="logo-img">
+                    <span>Mexplore</span>
+                </a>
+            </div>
+            <div class="nav-links">
+                <a href="home.html">Home</a>
+                <a href="about.html" class="active">About</a>
+                <a href="explore.html">Explore</a>
+                <a href="discover.html">Discover</a>
+                <a href="contact.html">Contact</a>
+            </div>
+            <div class="nav-actions">
+                <a href="artish/search.html" class="search-button">
+                    <span>Search Music</span>
+                    <svg class="search-icon" viewBox="0 0 24 24">
+                        <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </nav>
 
-  <body style="background-color: #e4e4d5" class="body">
-    <!-- NAV LINKS START -->
-    <div class="navbar">
-      <div class="navbarlinks">
-        <a href="home.html">home</a>
-        <a href="about.html">about</a>
-        <a href="explore.html">explore</a>
-        <a href="contact.html">contact</a>
-      </div>
-    </div>
-    <!-- NAV LINKS END -->
-    <!-- CONTENT START (centering) -->
+    <!-- Content Section -->
     <div class="content">
-      <!-- HEADER START -->
-      <div class="header">
-        <!--NAVBAR START-->
-      </div>
-      <!-- HEADER END -->
+        <div class="aboutmain">
+            <div class="center">
+                <h2>About Me</h2>
+                <hr class="solid1" />
 
-      <!-- MAIN START -->
-      <div class="aboutmain">
-        <div class="center">
-          <h2>about me</h2>
-          <hr class="solid1" />
-
-          <div class="aboutcontainer">
-            <p><b>nitish</b>, he/him, nepali :]</p>
-            <hr class="dotted2" />
-            <p>
-              <b>hobbies:</b> arts & , spoiling cooking , gaming , and playing
-              with code maybe.
-            </p>
-            <p><b>likes:</b> I don't know</p>
-
-            <hr class="dotted2" />
-            <p><b>email:</b> <u>nitishthapa000@gmail.com</u></p>
-          </div>
+                <div class="aboutcontainer">
+                    <p><b>Nitish</b>, he/him, Nepali :]</p>
+                    <hr class="dotted2" />
+                    <p>
+                        <b>Hobbies:</b> Arts, cooking, gaming, and coding
+                    </p>
+                    <p><b>Likes:</b> Music and creativity</p>
+                    <hr class="dotted2" />
+                    <p><b>Email:</b> <a href="mailto:nitishthapa000@gmail.com">nitishthapa000@gmail.com</a></p>
+                </div>
+            </div>
         </div>
-      </div>
-      <!-- MAIN END -->
-
-      <!-- FOOTER START -->
-      <div class="footer">
-        <div class="footerbar">
-          <p>© mexplore</p>
-        </div>
-      </div>
-      <!-- FOOTER END -->
     </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        <div class="footerbar">
+            <p> mexplore</p>
+        </div>
+    </div>
+
     <script type="text/javascript">
-      (function (d, t) {
-        var v = d.createElement(t),
-          s = d.getElementsByTagName(t)[0];
-        v.onload = function () {
-          window.voiceflow.chat.load({
-            verify: { projectID: "672f6bcf905199c9a7d490c2" },
-            url: "https://general-runtime.voiceflow.com",
-            versionID: "production",
-          });
-        };
-        v.src = "https://cdn.voiceflow.com/widget/bundle.mjs";
-        v.type = "text/javascript";
-        s.parentNode.insertBefore(v, s);
-      })(document, "script");
+        (function (d, t) {
+            var v = d.createElement(t),
+                s = d.getElementsByTagName(t)[0];
+            v.onload = function () {
+                window.voiceflow.chat.load({
+                    verify: { projectID: "672f6bcf905199c9a7d490c2" },
+                    url: "https://general-runtime.voiceflow.com",
+                    versionID: "production",
+                });
+            };
+            v.src = "https://cdn.voiceflow.com/widget/bundle.mjs";
+            v.type = "text/javascript";
+            s.parentNode.insertBefore(v, s);
+        })(document, "script");
     </script>
-    <!-- CONTENT END -->
-  </body>
-  <!-- BODY END -->
+</body>
 </html>
