--- a/artish/search.html
+++ b/artish/search.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #000000;
-            color: #ffffff;
+            background: #7d9166;
+            color: #000000;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -108,7 +108,7 @@
             text-align: center;
             font-size: 1.8em;
             margin-bottom: 25px;
-            color: #ffffff;
+            color: #000000;
             font-weight: 500;
             letter-spacing: 0.5px;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -204,20 +204,19 @@
         .song-title {
             font-weight: 500;
             font-size: 0.95em;
-            color: #ffffff;
             margin-bottom: 5px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+            transition: color 0.3s ease, text-shadow 0.3s ease;
         }
 
         .song-artist {
             font-size: 0.85em;
-            color: rgba(255, 255, 255, 0.7);
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            transition: color 0.3s ease;
         }
 
         .progress-container {
@@ -275,32 +274,30 @@
         }
 
         .back-button {
+            display: none;
+        }
+
+        .playlist-link {
             position: fixed;
-            top: 20px;
-            left: 20px;
-            background: transparent;
-            border: none;
-            color: #fff;
-            cursor: pointer;
-            font-size: 16px;
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            padding: 10px;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            z-index: 1000;
-        }
-
-        .back-button:hover {
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 12px 24px;
             background: rgba(255, 255, 255, 0.1);
-            transform: translateX(-2px);
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            border-radius: 25px;
+            color: #ffffff;
+            text-decoration: none;
+            font-size: 16px;
+            transition: all 0.3s ease;
+            backdrop-filter: blur(5px);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-        .back-button svg {
-            width: 20px;
-            height: 20px;
-            fill: currentColor;
+        .playlist-link:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateX(-50%) translateY(-2px);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
         }
 
         @media (max-width: 600px) {
@@ -337,12 +334,6 @@
 </head>
 <body>
     <div class="background-image-container" id="backgroundImage"></div>
-    <button class="back-button" onclick="window.location.href='music.html'">
-        <svg viewBox="0 0 24 24">
-            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
-        </svg>
-        Back
-    </button>
     <div class="container">
         <h1>Music Search</h1>
         <div class="search-container">
@@ -351,6 +342,7 @@
         </div>
         <div id="songsContainer"></div>
     </div>
+    <a href="playlist.html" class="playlist-link">My Playlist 🎵</a>
     <script>
         const searchInput = document.getElementById('searchInput');
         const searchButton = document.getElementById('searchButton');
