--- a/search.html
+++ b/search.html
@@ -12,10 +12,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 20px;
+            padding: 0;
             margin: 0;
-            min-height: 100vh;
+            height: 100vh;
             animation: fadeIn 0.5s ease-in-out;
+            overflow-x: hidden;
+            overflow-y: auto;
+            width: 100%;
         }
 
         @keyframes fadeIn {
@@ -23,57 +26,43 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
-        .background-image-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-size: cover;
-            background-position: center;
-            z-index: -1;
-            opacity: 0;
-            transition: opacity 0.5s ease-in-out;
-            filter: blur(0px) brightness(0.7);
-        }
-
-        .background-image-active {
-            opacity: 0.9;
-        }
-
         .container {
             max-width: 420px;
             width: 100%;
             background: transparent;
             backdrop-filter: none;
-            border-radius: 20px;
-            padding: 25px;
-            box-shadow: none;
-            border: none;
+            padding: 20px;
+            border-radius: 15px;
+            text-align: center;
+            transition: all 0.3s ease;
             position: relative;
-            overflow: hidden;
+            margin-top: 0;
         }
 
-        .container::before {
-            display: none;
+        .container.has-results {
+            margin-top: 5%;
         }
 
         .search-container {
-            margin-bottom: 25px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 8px;
+            margin: 20px auto;
+            width: 100%;
+            max-width: 250px;
             position: relative;
         }
 
         #searchInput {
             width: 100%;
-            padding: 14px 45px 14px 20px;
+            padding: 10px 35px 10px 15px;
             border: none;
-            border-radius: 12px;
-            background: rgba(0, 0, 0, 0.4);
-            color: #ffffff;
-            font-size: 15px;
+            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            font-size: 14px;
             outline: none;
             transition: all 0.3s ease;
-            box-sizing: border-box;
         }
 
         #searchInput::placeholder {
@@ -81,27 +70,27 @@
         }
 
         #searchInput:focus {
-            background: rgba(0, 0, 0, 0.5);
-            box-shadow: none;
+            background: rgba(255, 255, 255, 1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         #searchButton {
             position: absolute;
-            right: 12px;
-            top: 50%;
-            transform: translateY(-50%);
+            right: 10px;
             background: none;
             border: none;
-            color: rgba(255, 255, 255, 0.6);
+            font-size: 16px;
             cursor: pointer;
-            font-size: 20px;
-            padding: 8px;
-            transition: all 0.3s ease;
+            padding: 0;
+            color: #666;
+            transition: color 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         #searchButton:hover {
-            color: rgba(255, 255, 255, 0.9);
-            transform: translateY(-50%) scale(1.1);
+            color: #000;
         }
 
         h1 {
@@ -115,11 +104,18 @@
         }
 
         #songsContainer {
-            max-height: 65vh;
+            margin-top: 20px;
+            opacity: 0;
+            max-height: 0;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            padding-bottom: 60px;
+        }
+
+        #songsContainer.visible {
+            opacity: 1;
+            max-height: 70vh;
             overflow-y: auto;
-            padding-right: 8px;
-            margin: 0 -5px;
-            padding-left: 5px;
         }
 
         #songsContainer::-webkit-scrollbar {
@@ -159,40 +155,57 @@
             position: absolute;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(120deg, transparent 0%, rgba(255, 255, 255, 0.05) 50%, transparent 100%);
-            transform: translateX(-100%);
-            transition: transform 0.5s ease;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, rgba(255,255,255,0.1), rgba(255,255,255,0.2));
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
 
         .song:hover {
             transform: translateY(-2px);
-            background: rgba(0, 0, 0, 0.2);
-            box-shadow: none;
         }
 
         .song:hover::after {
-            transform: translateX(100%);
+            opacity: 1;
         }
 
         .song.playing {
-            background: rgba(0, 0, 0, 0.3);
+            animation: pulseLight 2s infinite;
+            background: rgba(255, 255, 255, 0.15);
+        }
+
+        @keyframes pulseLight {
+            0% { background: rgba(255, 255, 255, 0.15); }
+            50% { background: rgba(255, 255, 255, 0.25); }
+            100% { background: rgba(255, 255, 255, 0.15); }
+        }
+
+        .song.zoom {
             transform: scale(1.02);
-            box-shadow: none;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         .song img {
-            width: 52px;
-            height: 52px;
-            border-radius: 10px;
+            width: 65px;
+            height: 65px;
+            border-radius: 12px;
             margin-right: 15px;
-            box-shadow: none;
-            transition: all 0.3s ease;
+            object-fit: cover;
+            transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
         .song:hover img {
-            transform: scale(1.05);
+            transform: scale(1.08) rotate(2deg);
+        }
+
+        .song.playing img {
+            animation: rotateSlightly 8s infinite linear;
+        }
+
+        @keyframes rotateSlightly {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
         .song-details {
@@ -222,9 +235,10 @@
         .progress-container {
             width: calc(100% - 67px);
             height: 4px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.1);
             border-radius: 2px;
             margin-top: 10px;
+            margin-left: 13%;
             overflow: hidden;
             cursor: pointer;
             display: none;
@@ -238,7 +252,7 @@
         .progress-bar {
             width: 0%;
             height: 100%;
-            background: linear-gradient(90deg, #64ffdb 0%, #48d6ff 100%);
+            background: black;
             border-radius: 2px;
             transition: width 0.1s linear;
             position: relative;
@@ -273,31 +287,93 @@
             transform: translateY(-50%) scale(1.1);
         }
 
-        .back-button {
+        .song-controls {
             display: none;
         }
 
-        .playlist-link {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 12px 24px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 2px solid rgba(255, 255, 255, 0.2);
-            border-radius: 25px;
-            color: #ffffff;
-            text-decoration: none;
-            font-size: 16px;
-            transition: all 0.3s ease;
-            backdrop-filter: blur(5px);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        .download-btn {
+            display: none;
         }
 
-        .playlist-link:hover {
+        .downloads-section {
+            display: none;
+        }
+
+        .downloaded-song {
+            display: none;
+        }
+
+        .bottom-nav {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: rgba(125, 145, 102, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 12px 0;
+            z-index: 1000;
+        }
+
+        .nav-links {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 35px;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        .nav-links a {
+            color: #000000;
+            text-decoration: none;
+            font-size: 15px;
+            font-weight: 500;
+            transition: color 0.3s ease, background 0.3s ease;
+            padding: 6px 12px;
+            border-radius: 3px;
+        }
+
+        .nav-links a:hover,
+        .nav-links a.active {
+            color: #000000;
             background: rgba(255, 255, 255, 0.2);
-            transform: translateX(-50%) translateY(-2px);
-            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .about-section {
+            display: none;
+            padding: 20px;
+            max-width: 420px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .about-section.active {
+            display: block;
+        }
+
+        .about-section h2 {
+            margin-bottom: 20px;
+        }
+
+        .about-content {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 12px;
+            margin-top: 20px;
+            line-height: 1.6;
+        }
+
+        .about-content p {
+            margin-bottom: 15px;
+        }
+
+        #mainContent {
+            display: block;
+        }
+
+        #mainContent.hidden {
+            display: none;
         }
 
         @media (max-width: 600px) {
@@ -329,25 +405,45 @@
                 width: calc(100% - 57px);
             }
         }
-
     </style>
 </head>
 <body>
-    <div class="background-image-container" id="backgroundImage"></div>
     <div class="container">
         <h1>Music Search</h1>
-        <div class="search-container">
-            <input type="text" id="searchInput" placeholder="Search for music...">
-            <button id="searchButton">🔍</button>
+        <div id="mainContent">
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Search for music...">
+                <button id="searchButton">🔍</button>
+            </div>
+            <div id="songsContainer"></div>
         </div>
-        <div id="songsContainer"></div>
+
+        <div id="aboutSection" class="about-section">
+            <h2>About Music Explorer</h2>
+            <div class="about-content">
+                <p>Welcome to Music Explorer, your gateway to discovering and enjoying music!</p>
+                <p>This application allows you to search and preview songs from a vast library of music. You can listen to previews and enjoy your favorite tracks.</p>
+                <p>Features:</p>
+                <ul>
+                    <li>Search through millions of songs</li>
+                    <li>Preview tracks</li>
+                    <li>Enjoy your favorite music</li>
+                </ul>
+                <p>Built with ❤️ for music lovers</p>
+            </div>
+        </div>
     </div>
-    <a href="playlist.html" class="playlist-link">My Playlist 🎵</a>
+    <nav class="bottom-nav">
+        <ul class="nav-links">
+            <li><a href="#" class="active" onclick="showSection('main')">Search</a></li>
+            <li><a href="#" onclick="showSection('about')">About</a></li>
+        </ul>
+    </nav>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script>
         const searchInput = document.getElementById('searchInput');
         const searchButton = document.getElementById('searchButton');
         const songsContainer = document.getElementById('songsContainer');
-        const bgContainer = document.getElementById('backgroundImage');
         let currentlyPlayingAudio = null;
         let currentlyPlayingContainer = null;
         let isDragging = false;
@@ -410,58 +506,11 @@
 
                     songsContainer.appendChild(songElement);
                 });
+                document.querySelector('.container').classList.add('has-results');
+                songsContainer.classList.add('visible');
             } catch (error) {
                 console.error('Error:', error);
             }
-        }
-
-        function displayResults(songs) {
-            const songsContainer = document.getElementById('songsContainer');
-            songsContainer.innerHTML = '';
-            songs.forEach((song, index) => {
-                const songId = `song${index + 1}`;
-                const songElement = document.createElement('div');
-                songElement.className = 'song';
-                songElement.id = songId;
-                songElement.innerHTML = `
-                    <img src="${song.album.cover_medium}" alt="${song.title}" class="song-thumbnail">
-                    <div class="song-details">
-                        <div class="song-title">${song.title}</div>
-                        <div class="song-artist">${song.artist.name}</div>
-                        <div class="progress-container">
-                            <div class="progress-bar"></div>
-                            <div class="progress-handle"></div>
-                        </div>
-                    </div>
-                    <audio class="audio-element" src="${song.preview}"></audio>
-                `;
-
-                let clickTimeout;
-
-                songElement.addEventListener('click', () => {
-                    if (!clickTimeout) {
-                        clickTimeout = setTimeout(() => {
-                            clickTimeout = null;
-                            handleSongClick(songId, song);
-                        }, 200);
-                    }
-                });
-
-                songElement.addEventListener('dblclick', (e) => {
-                    if (clickTimeout) {
-                        clearTimeout(clickTimeout);
-                        clickTimeout = null;
-                    }
-                    if (isZoomed) {
-                        songElement.classList.remove('zoom');
-                    } else {
-                        songElement.classList.add('zoom');
-                    }
-                    isZoomed = !isZoomed;
-                });
-
-                songsContainer.appendChild(songElement);
-            });
         }
 
         function handleSongClick(songId, song) {
@@ -554,7 +603,6 @@
                 currentlyPlayingAudio = null;
                 currentlyPlayingContainer = null;
                 progressBar.style.width = '0%';
-                updateBackground(null, 'out');
             } else {
                 if (currentlyPlayingAudio) {
                     currentlyPlayingAudio.pause();
@@ -569,7 +617,6 @@
                 currentlyPlayingAudio = audio;
                 currentlyPlayingContainer = songElement;
                 updateProgress();
-                updateBackground(albumCover, 'in');
             }
 
             audio.addEventListener("ended", () => {
@@ -584,8 +631,6 @@
                     setTimeout(() => {
                         togglePlay(nextSongId);
                     }, 2000);
-                } else {
-                    updateBackground(null);
                 }
             });
         }
@@ -597,22 +642,24 @@
             return nextIndex <= totalSongs ? `song${nextIndex}` : null;
         }
 
-        function updateBackground(newCover, fadeType = 'in') {
-            if (newCover) {
-                // Preload the image
-                const img = new Image();
-                img.src = newCover;
-                img.onload = () => {
-                    bgContainer.style.backgroundImage = `url(${newCover})`;
-                    bgContainer.style.animation = `fade${fadeType.charAt(0).toUpperCase() + fadeType.slice(1)} 1.5s ease-in-out forwards`;
-                    bgContainer.classList.add("background-image-active");
-                };
+        function showSection(section) {
+            const mainContent = document.getElementById('mainContent');
+            const aboutSection = document.getElementById('aboutSection');
+            const navLinks = document.querySelectorAll('.nav-links a');
+
+            navLinks.forEach(link => link.classList.remove('active'));
+            
+            // Hide all sections first
+            mainContent.classList.add('hidden');
+            aboutSection.classList.remove('active');
+
+            // Show selected section
+            if (section === 'about') {
+                aboutSection.classList.add('active');
+                navLinks[1].classList.add('active');
             } else {
-                bgContainer.style.animation = 'fadeOut 1.5s ease-in-out forwards';
-                setTimeout(() => {
-                    bgContainer.classList.remove("background-image-active");
-                    bgContainer.style.animation = '';
-                }, 1500);
+                mainContent.classList.remove('hidden');
+                navLinks[0].classList.add('active');
             }
         }
 
