--- a/search.html
+++ b/search.html
@@ -15,10 +15,10 @@
             padding: 0;
             margin: 0;
             height: 100vh;
-            animation: fadeIn 0.5s ease-in-out;
-            overflow-x: hidden;
-            overflow-y: auto;
+            position: fixed;
             width: 100%;
+            overflow: hidden;
+            animation: fadeIn 0.5s ease-in-out;
         }
 
         @keyframes fadeIn {
@@ -27,7 +27,7 @@
         }
 
         .container {
-            max-width: 420px;
+            max-width: 450px;
             width: 100%;
             background: transparent;
             backdrop-filter: none;
@@ -104,17 +104,17 @@
         }
 
         #songsContainer {
-            margin-top: 20px;
+            margin-top: 15px;
             opacity: 0;
             max-height: 0;
             overflow: hidden;
             transition: all 0.3s ease;
-            padding-bottom: 60px;
+            padding-bottom: 40px;
         }
 
         #songsContainer.visible {
             opacity: 1;
-            max-height: 70vh;
+            max-height: calc(100vh - 250px);
             overflow-y: auto;
         }
 
@@ -139,9 +139,9 @@
         .song {
             display: flex;
             align-items: center;
-            padding: 12px 15px;
+            padding: 8px 15px;
             border-radius: 12px;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
             background: transparent;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             cursor: pointer;
@@ -187,10 +187,10 @@
         }
 
         .song img {
-            width: 65px;
-            height: 65px;
-            border-radius: 12px;
-            margin-right: 15px;
+            width: 50px;
+            height: 50px;
+            border-radius: 10px;
+            margin-right: 12px;
             object-fit: cover;
             transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
@@ -211,25 +211,26 @@
         .song-details {
             flex: 1;
             min-width: 0;
-            padding-right: 10px;
+            text-align: left;
+            margin-right: 10px;
         }
 
         .song-title {
             font-weight: 500;
-            font-size: 0.95em;
-            margin-bottom: 5px;
+            margin-bottom: 2px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            transition: color 0.3s ease, text-shadow 0.3s ease;
+            color: #000000;
+            font-size: 0.95em;
         }
 
         .song-artist {
-            font-size: 0.85em;
+            font-size: 0.8em;
+            opacity: 0.8;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            transition: color 0.3s ease;
         }
 
         .progress-container {
