--- a/search.html
+++ b/search.html
@@ -300,17 +300,7 @@
             display: none;
         }
 
-        .download-btn {
-            display: none;
-        }
 
-        .downloads-section {
-            display: none;
-        }
-
-        .downloaded-song {
-            display: none;
-        }
 
         .bottom-nav {
             position: fixed;
@@ -395,6 +385,7 @@
 
             .song {
                 padding: 10px;
+                width: 90%;
             }
 
             .song img {
