--- a/search.html
+++ b/search.html
@@ -100,8 +100,7 @@
         justify-content: center;
         align-items: center;
         gap: 8px;
-        margin: 20px 0;
-        margin-left: 10%;
+        margin: 20px auto;
         width: 80%;
         max-width: 250px;
         position: relative;
@@ -394,10 +393,10 @@
       .nav-links a {
         color: inherit;
         text-decoration: none;
-        padding: 6px 12px;
+        padding: 10px 20px;
         border-radius: 3px;
         transition: all 0.3s ease;
-        font-size: 15px;
+        font-size: 20px;
         font-weight: 500;
       }
 
@@ -668,7 +667,7 @@
         }
 
         .nav-links a {
-          font-size: 13px;
+          font-size: 15px;
           padding: 5px 10px;
         }
 
