--- a/artish/uk-playlist.html
+++ b/artish/uk-playlist.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="logo/audio-waves.png" type="image/x-icon" />
+    <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/svg+xml" href="../icons/icons8-logo-50.svg" />
+    <link rel="apple-touch-icon" href="../icons/icons8-logo-150.svg" />
+    <link rel="manifest" href="../manifest.json" />
     <link rel="stylesheet" href="styles.css" />
     <title>uk Playlist</title>
   </head>
