--- a/search.html
+++ b/search.html
@@ -1468,7 +1468,7 @@
     <nav class="bottom-nav">
       <ul class="nav-links">
         <li>
-          <a href="#" onclick="showSection('home')">Home</a>
+          <a href="search.html" onclick="showSection('home')">Home</a>
         </li>
         <li>
           <a href="#" onclick="showSection('search')">Search</a>
